test_report.txt

> react-typescript-starter@0.1.0 test
> react-scripts test --coverage

Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating
FAIL src/components/PlayerCard.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/CISC275ProjectGroup10/CISC275ProjectGroup10/node_modules/react-bootstrap/esm/CardHeader.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import classNames from 'classnames';
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      3 | import { Player } from "../interfaces/player";
      4 | import { Card, CardImg } from "react-bootstrap";
    > 5 | import CardHeader from "react-bootstrap/esm/CardHeader";
        | ^
      6 |
      7 | const size = "18rem";
      8 |

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/components/PlayerCard.tsx:5:1)

PASS src/components/UserDropDownButton.test.tsx
FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/CISC275ProjectGroup10/CISC275ProjectGroup10/node_modules/react-bootstrap/esm/CardHeader.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import classNames from 'classnames';
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      3 | import { Player } from "../interfaces/player";
      4 | import { Card, CardImg } from "react-bootstrap";
    > 5 | import CardHeader from "react-bootstrap/esm/CardHeader";
        | ^
      6 |
      7 | const size = "18rem";
      8 |

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/components/PlayerCard.tsx:5:1)

-------------------------|---------|----------|---------|---------|-------------------
File                     | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------------------|---------|----------|---------|---------|-------------------
All files                |   42.85 |      100 |      40 |   42.85 |                   
 src                     |       0 |      100 |       0 |       0 |                   
  App.tsx                |       0 |      100 |       0 |       0 | 7                 
 src/components          |      50 |      100 |      50 |      50 |                   
  PlayerCard.tsx         |       0 |      100 |       0 |       0 | 7-15              
  UserDropDownButton.tsx |      75 |      100 |   66.66 |      75 | 13                
 src/interfaces          |       0 |        0 |       0 |       0 |                   
  coach.tsx              |       0 |        0 |       0 |       0 |                   
  field.tsx              |       0 |        0 |       0 |       0 |                   
  leagueManager.tsx      |       0 |        0 |       0 |       0 |                   
  player.tsx             |       0 |        0 |       0 |       0 |                   
  team.tsx               |       0 |        0 |       0 |       0 |                   
  teamManager.tsx        |       0 |        0 |       0 |       0 |                   
-------------------------|---------|----------|---------|---------|-------------------
Test Suites: 2 failed, 1 passed, 3 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        4.174 s
Ran all test suites.
